
syntax='proto3';

package contract;

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string contennt = 4;
}

service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {}
}

message CreateBlogRequest {
   Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1;
}